--- a/springcloudfather/business/src/main/resources/application.properties
+++ b/springcloudfather/business/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.application.name=business
 server.port=6000
 
 
+spring.datasource.url=jdbc:mysql://localhost:3306/day19?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 eureka.client.service-url.defaultZone=http://localhost:5000/eureka/
